--- a/prepros-6.config
+++ b/prepros-6.config
@@ -29,7 +29,8 @@
     {
       "path": "assets/sass/style.scss",
       "imports": [
-        "assets/sass/partials/_global.scss"
+        "assets/sass/partials/_global.scss",
+        "assets/sass/partials/_header.scss"
       ]
     }
   ],
