--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,7 +31,8 @@
       "imports": [
         "assets/sass/partials/_global.scss",
         "assets/sass/partials/_header.scss",
-        "assets/sass/partials/_hero.scss"
+        "assets/sass/partials/_hero.scss",
+        "assets/sass/partials/_about.scss"
       ]
     }
   ],
