--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,7 +32,8 @@
         "assets/sass/partials/_global.scss",
         "assets/sass/partials/_header.scss",
         "assets/sass/partials/_hero.scss",
-        "assets/sass/partials/_about.scss"
+        "assets/sass/partials/_about.scss",
+        "assets/sass/partials/_counceling.scss"
       ]
     }
   ],
