arcbd.org #007 | Service section added
Added service section and made some other changes.

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,6 +33,7 @@
         "assets/sass/partials/_header.scss",
         "assets/sass/partials/_hero.scss",
         "assets/sass/partials/_about.scss",
+        "assets/sass/partials/_service.scss",
         "assets/sass/partials/_counceling.scss"
       ]
     }
