arcbd.org #008 | Skill section added
Skill section added.

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,7 +34,8 @@
         "assets/sass/partials/_hero.scss",
         "assets/sass/partials/_about.scss",
         "assets/sass/partials/_service.scss",
-        "assets/sass/partials/_counceling.scss"
+        "assets/sass/partials/_counceling.scss",
+        "assets/sass/partials/_skill.scss"
       ]
     }
   ],
