arcbd.org #008 | Recent post section added
Recent post section added

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,7 +35,8 @@
         "assets/sass/partials/_about.scss",
         "assets/sass/partials/_service.scss",
         "assets/sass/partials/_counceling.scss",
-        "assets/sass/partials/_skill.scss"
+        "assets/sass/partials/_skill.scss",
+        "assets/sass/partials/_recent-post.scss"
       ]
     }
   ],
