arcbd.org #009 | Footer section added
Footer section added

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,7 +36,8 @@
         "assets/sass/partials/_service.scss",
         "assets/sass/partials/_counceling.scss",
         "assets/sass/partials/_skill.scss",
-        "assets/sass/partials/_recent-post.scss"
+        "assets/sass/partials/_recent-post.scss",
+        "assets/sass/partials/_footer.scss"
       ]
     }
   ],
