--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,6 +36,7 @@
         "assets/sass/partials/_service.scss",
         "assets/sass/partials/_counceling.scss",
         "assets/sass/partials/_skill.scss",
+        "assets/sass/partials/_contact.scss",
         "assets/sass/partials/_recent-post.scss",
         "assets/sass/partials/_footer.scss"
       ]
